--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </header>
             <figure class="main-gr2 ml-auto">
-                <img class="h-16" src="./img-content-removebg-preview.png" alt="">
+                <img class="h-16" src="/images/img-content-removebg-preview.png" alt="">
             </figure>
         </section>
 
@@ -73,23 +73,23 @@
 
             <div class="flex justify-between mt-14">
                 <figure class="w-40 h-20  p-2 flex justify-center items-center">
-                    <img class="h-10 w-auto" src="../images/Meundex.png" alt="">
+                    <img class="h-10 w-auto" src="/images/Meundex.png" alt="">
                 </figure>
 
                 <figure class="w-40 h-20  p-2 flex justify-center items-center">
-                    <img class="h-10 w-auto" src="../images/lack.png" alt="">
+                    <img class="h-10 w-auto" src="/images/lack.png" alt="">
                 </figure>
 
                 <figure class="w-40 h-20 rounded-2xl shadow-xl p-2 flex justify-center items-center">
-                    <img class="h-10 w-auto" src="../images/amzon.png" alt="">
+                    <img class="h-10 w-auto" src="/images/amzon.png" alt="">
                 </figure>
 
                 <figure class="w-40 h-20  p-2 flex justify-center items-center">
-                    <img class="h-10 w-auto" src="../images/wooCommerce.png" alt="">
+                    <img class="h-10 w-auto" src="/images/wooCommerce.png" alt="">
                 </figure>
 
                 <figure class="w-40 h-20  p-2 flex justify-center items-center">
-                    <img class="h-10 w-auto" src="../images/sitepoint.png" alt="">
+                    <img class="h-10 w-auto" src="/images/sitepoint.png" alt="">
                 </figure>
 
             </div>
@@ -110,7 +110,7 @@
 
             <div class="mt-20 w-full flex justify-center relative">
                 <figure class="absolute left-[440px]">
-                    <img class="h-16 w-24" src="../images/buyGuilder.png" alt="Trulli">
+                    <img class="h-16 w-24" src="/images/buyGuilder.png" alt="Trulli">
                     <figcaption>Buyer Guides</figcaption>
                     <span class="text-[#2196ff] font-semibold">
                         How to buy
@@ -118,7 +118,7 @@
                     </span>
                 </figure>
                 <figure>
-                    <img class="h-16 w-20" src="../images/renter.png" alt="Trulli">
+                    <img class="h-16 w-20" src="/images/renter.png" alt="Trulli">
                     <figcaption>Renter Guides</figcaption>
                     <span class="text-[#2196ff] font-semibold">
                         How to rent
@@ -126,7 +126,7 @@
                     </span>
                 </figure>
                 <figure class="absolute right-[445px]">
-                    <img class="h-16 w-20" src="../images/seller.png" alt="Trulli">
+                    <img class="h-16 w-20" src="/images/seller.png" alt="Trulli">
                     <figcaption>Seller Guides</figcaption>
                     <span class="text-[#2196ff] font-semibold">
                         How to sell
@@ -153,7 +153,7 @@
             <ul class="px-28 h-fit mt-20 grid grid-cols-3 lg:grid-cols-4x gap-3">
                 <li class="w-96 h-[365px] bg-white rounded-xl">
                     <figure class="w-full h-60 ">
-                        <img class="w-full h-full rounded-t-xl" src="../images/nikkoApartment.png" alt="nikkoApartment">
+                        <img class="w-full h-full rounded-t-xl" src="/images/nikkoApartment.png" alt="nikkoApartment">
                         <figcaption class="font-bold text-xl mt-4 ml-5 mr-5">Nikko Apartments</figcaption>
                         <figcaption class="mt-2 ml-5 mr-5">8502 Preston Rd.Inglewood, Maine 98280</figcaption>
                         <div class="flex space-x-6 text-gray-800 text-sm mx-5 mt-5">
@@ -165,7 +165,7 @@
                 </li>
                 <li class="w-96 h-[365px] bg-white rounded-xl">
                     <figure class="w-full h-60 ">
-                        <img class="w-full h-full rounded-t-xl" src="../images/coucou.png" alt="coucouHomestead">
+                        <img class="w-full h-full rounded-t-xl" src="/images/coucou.png" alt="coucouHomestead">
                         <figcaption class="font-bold text-xl mt-4 ml-5 mr-5">CouCou Homestead</figcaption>
                         <figcaption class="mt-2 ml-5 mr-5">8502 Preston Rd.Inglewood, Maine 98280</figcaption>
                         <div class="flex space-x-6 text-gray-800 text-sm mx-5 mt-5">
@@ -177,7 +177,7 @@
                 </li>
                 <li class="w-96 h-[365px] bg-white rounded-xl">
                     <figure class="w-full h-60 ">
-                        <img class="w-full h-full rounded-t-xl" src="../images/lavis18.png" alt="lavis18">
+                        <img class="w-full h-full rounded-t-xl" src="/images/lavis18.png" alt="lavis18">
                         <figcaption class="font-bold text-xl mt-4 ml-5 mr-5">Lavis 18 Resident</figcaption>
                         <figcaption class="mt-2 ml-5 mr-5">8502 Preston Rd.Inglewood, Maine 98280</figcaption>
                         <div class="flex space-x-6 text-gray-800 text-sm mx-5 mt-5">
@@ -195,7 +195,7 @@
                         <div class="w-1/2 px-12 rounded-2xl relative">
                             <div class="absolute w-[45%] h-full rounded-2xl left-[300px]">
                                 <img class="rounded-2xl w-full h-full relative"
-                                    src="../images/istockphoto-1312027174-612x612.jpg" alt="">
+                                    src="/images/istockphoto-1312027174-612x612.jpg" alt="">
                                 <div class="rounded-br-2xl w-full h-fit bg-white top-0 right-60 absolute py-5 px-5">
                                     <div class="w-full">
                                         <div class="flex w-full justify-between ">
@@ -208,31 +208,31 @@
                                             <div class="w-fit h-5 mr-8">
                                                 <figure class="relative flex w-fit h-full">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/diego Pressiidnet.jpg" alt="">
+                                                        src="/images/diego Pressiidnet.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/donaltrum.jpg" alt="">
+                                                        src="/images/donaltrum.jpg" alt="">
                                                 </figure>
                                             </div>
                                             <div class="w-fit h-5 mr-16">
                                                 <figure class="w-fit h-full flex relative">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/wwomen presidenf.jpg" alt="">
+                                                        src="/images/wwomen presidenf.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/donaltrum.jpg" alt="">
+                                                        src="/images/donaltrum.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-8"
-                                                        src="../images/diego Pressiidnet.jpg" alt="">
+                                                        src="/images/diego Pressiidnet.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-12"
-                                                        src="../images/R.png" alt="">
+                                                        src="/images/R.png" alt="">
                                                 </figure>
                                             </div>
                                             <div class="w-fit h-5">
                                                 <figure class="w-fit h-full flex relative">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/fj.jpg" alt="">
+                                                        src="/images/fj.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/wwomen presidenf.jpg" alt="">
+                                                        src="/images/wwomen presidenf.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-8"
-                                                        src="../images/S.png" alt="">
+                                                        src="/images/S.png" alt="">
                                                 </figure>
                                             </div>
                                         </div>
@@ -241,40 +241,40 @@
                                             <div class="w-fit h-5 mr-16">
                                                 <figure class="relative flex w-fit h-full">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/diego Pressiidnet.jpg" alt="">
+                                                        src="/images/diego Pressiidnet.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/wwomen presidenf.jpg" alt="">
+                                                        src="/images/wwomen presidenf.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-8"
-                                                        src="../images/donaltrum.jpg" alt="">
+                                                        src="/images/donaltrum.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-12"
-                                                        src="../images/JJ.jpg" alt="">
+                                                        src="/images/JJ.jpg" alt="">
                                                 </figure>
                                             </div>
 
                                             <div class="w-fit h-5 mr-7">
                                                 <figure class="relative flex w-fit h-full">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/donaltrum.jpg" alt="">
+                                                        src="/images/donaltrum.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/Qv.jpg" alt="">
+                                                        src="/images/Qv.jpg" alt="">
                                                 </figure>
                                             </div>
 
                                             <div class="w-fit h-5 mr-7">
                                                 <figure class="relative flex w-fit h-full">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/wwomen presidenf.jpg" alt="">
+                                                        src="/images/wwomen presidenf.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/diego Pressiidnet.jpg" alt="">
+                                                        src="/images/diego Pressiidnet.jpg" alt="">
                                                 </figure>
                                             </div>
 
                                             <div class="w-fit h-5">
                                                 <figure class="relative flex w-fit h-full">
                                                     <img class="rounded-full aspect-square object-cover"
-                                                        src="../images/donaltrum.jpg" alt="">
+                                                        src="/images/donaltrum.jpg" alt="">
                                                     <img class="rounded-full aspect-square object-cover absolute left-4"
-                                                        src="../images/IU.jpg" alt="">
+                                                        src="/images/IU.jpg" alt="">
                                                 </figure>
                                             </div>
                                         </div>
@@ -320,7 +320,7 @@
                             class="w-32 h-10 rounded-md text-[#063183] bg-white mt-5 font-semibold">Subscribe</button>
                     </div>
                     <figure class="absolute right-60 bottom-0">
-                        <img class="h-80" src="../images/smartphone.png" alt="">
+                        <img class="h-80" src="/images/smartphone.png" alt="">
                     </figure>
                 </header>
             </section>
